update: 支持通过ctrl+alt+d打开开发者工具

--- a/index.html
+++ b/index.html
@@ -10,4 +10,15 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <script>
+    window.addEventListener('keydown',e => {
+      const { altKey, ctrlKey, keyCode } = e;
+      <!--alt + ctrl + d -->
+      if(altKey && ctrlKey  && keyCode === 68){
+        const { ipcRenderer } = require('electron')
+        ipcRenderer.send('open-devtools')
+        e.preventDefault();
+      }
+    },false);
+  </script>
 </html>
